# Telomeri

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  makefile  run.sh
include/: DeterministicHeuristic.hpp  MonteCarloHeuristic.hpp  OverlapGraph.h  OverlapGraph.hpp  Path.hpp  PathBuilder.hpp  PathGroup.hpp  PathManager.hpp  PathWindow.hpp  Scaffolder.hpp  Stopwatch.hpp  Utils.hpp
include/old/: Greeter.h
res/: Readme.md
src/: DeterministicHeuristic.cpp  Main.cpp  MonteCarloHeuristic.cpp  OverlapGraph.cpp  Path.cpp  PathBuilder.cpp  PathGroup.cpp  PathManager.cpp  PathWindow.cpp  Scaffolder.cpp  Stopwatch.cpp
src/greeter/: Greeter.cpp
src/old/: Greeter.c
test/: CatchMain.cpp  Tests.cpp
test/res/: EColi_CR_overlaps.paf
